feat: [PL-32248]: Support sorting on secrets listing. (#45986)
* feat: [PL-32248]: Supporting sorting for secrets.

* fix: [PL-31229]: Making sort case insensitive.

* feat: [PL-32248]: Support sorting on secrets listing.

* feat: [PL-32248]: Support sorting on secret listing.

* feat: [PL-32248]: Support sorting on secret listing.